samples/_failures_safe/1761630150_008426_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_608a753f.c: In function ‘main’:
./samples/SAFE/__tmp_608a753f.c:145:9: error: expected declaration or statement at end of input
  145 |         display_entries(entries, entry_count, "INFO");
      |         ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_608a753f.c:145:9: error: expected declaration or statement at end of input
